pkg/deps/testdata/ub/manifest/invalid/missing-version.ub
manifest: {
  requires: {
    'github.com/x/y': {
      indirect: true
    }
  }
}
